<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:background="@color/bg_color_fully_transparent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_20sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="@dimen/_15sdp"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_15sdp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtMessage"
                            android:layout_width="match_parent"
                            style="@style/TextStyleCenterMedium"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:textSize="@dimen/biggest_text_size"
                            android:layout_marginHorizontal="@dimen/screen_margin"
                            android:text="@string/enter_server_details"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/edtAddress"
                            style="@style/CommonInputEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edt_height"
                            android:hint="@string/enter_ip_address"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:imeOptions="actionDone"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtMessage" />

                        <EditText
                            android:id="@+id/edtPort"
                            style="@style/CommonInputEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edt_height"
                            android:hint="@string/enter_port"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:imeOptions="actionDone"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edtAddress" />

                        <EditText
                            android:id="@+id/edtSelectCounter"
                            style="@style/CommonInputEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edt_height"
                            android:hint="@string/select_counter"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:imeOptions="actionDone"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edtPort" />

                        <EditText
                            android:id="@+id/edtServiceConfig"
                            style="@style/CommonInputEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edt_height"
                            android:hint="@string/service_config"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:imeOptions="actionDone"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edtSelectCounter" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edtServiceConfig"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_height="@dimen/btn_size"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/btnAlertPositive"
                                android:layout_width="@dimen/_110sdp"
                                style="@style/CommonButtonStyle"
                                android:layout_gravity="center"
                                android:layout_marginStart="0dp"
                                android:textSize="@dimen/btn_text_size"
                                android:text="@string/confirm"
                                android:includeFontPadding="false"
                                android:layout_marginEnd="@dimen/_3sdp"
                                android:layout_height="@dimen/_30sdp" />

                            <TextView
                                android:id="@+id/btnAlertNegative"
                                android:layout_width="@dimen/_110sdp"
                                style="@style/CommonButtonStyle"
                                android:layout_marginEnd="0dp"
                                android:backgroundTint="@color/primary_light_color"
                                android:layout_marginStart="@dimen/_3sdp"
                                android:layout_gravity="center"
                                android:visibility="gone"
                                android:textSize="@dimen/btn_text_size"
                                android:textColor="@color/txt_color_white"
                                android:layout_height="@dimen/_30sdp" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </ScrollView>



            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>